Add target for UI Testing

--- a/ToDo.xcodeproj/xcshareddata/xcschemes/ToDo.xcscheme
+++ b/ToDo.xcodeproj/xcshareddata/xcschemes/ToDo.xcscheme
@@ -39,6 +39,16 @@
                ReferencedContainer = "container:ToDo.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "837F19BC1E9674A400C012AA"
+               BuildableName = "ToDoUITests.xctest"
+               BlueprintName = "ToDoUITests"
+               ReferencedContainer = "container:ToDo.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
