Make separate scheme for UI Testing.

--- a/ToDo.xcodeproj/xcshareddata/xcschemes/ToDo.xcscheme
+++ b/ToDo.xcodeproj/xcshareddata/xcschemes/ToDo.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:ToDo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8354E68B1E899FFB00B7DEC0"
+               BuildableName = "ToDoTests.xctest"
+               BlueprintName = "ToDoTests"
+               ReferencedContainer = "container:ToDo.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -36,16 +50,6 @@
                BlueprintIdentifier = "8354E68B1E899FFB00B7DEC0"
                BuildableName = "ToDoTests.xctest"
                BlueprintName = "ToDoTests"
-               ReferencedContainer = "container:ToDo.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "837F19BC1E9674A400C012AA"
-               BuildableName = "ToDoUITests.xctest"
-               BlueprintName = "ToDoUITests"
                ReferencedContainer = "container:ToDo.xcodeproj">
             </BuildableReference>
          </TestableReference>
